--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- first-banner -->
+    <section class="first-banner">
+        <div class="banner-content">
+            <div>
+                <div>
+                    <h1>Let’s Help Those Who Are More In Need</h1>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p></div>
+                <div class="btn-class">
+                    <a href="#" class="btn">Donate Now</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
