donate today donee

--- a/index.html
+++ b/index.html
@@ -10,14 +10,48 @@
 <body>
     <!-- first-banner -->
     <section class="first-banner">
-        <div class="banner-content">
-            <div>
+        <div class="banner-mask">
+            <div class="banner-content">
                 <div>
                     <h1>Let’s Help Those Who Are More In Need</h1>
-                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p></div>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+                </div>
+
                 <div class="btn-class">
                     <a href="#" class="btn">Donate Now</a>
                 </div>
+            </div>
+        </div>
+    </section>
+    <!-- donate-today -->
+    <section class="donate-today">
+        <div class="donate-content">
+            <h2>Donate today</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="donate-card">
+            <div>
+                <h3>100tk</h3>
+            </div>
+            <div id="selected-card">
+                <h3>200tk</h3>
+            </div>
+            <div>
+                <h3>500tk</h3>
+            </div>
+            <div>
+                <h3>1000tk</h3>
+            </div>
+            <div>
+                <h3>5000tk</h3>
+            </div>
+        </div>
+        <div class="donate-input">
+            <div class="input-field">
+                <input type="text" placeholder="Other Amount(Taka)">
+            </div>
+            <div class="btn-class">
+                <a href="#" class="btn">Donate Now</a>
             </div>
         </div>
     </section>
