--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="banner-mask">
             <div class="banner-content">
                 <div>
-                    <h1>Let’s Help Those Who Are More In Need</h1>
+                    <h1>Let’s Help Those Who Are <br> More In Need</h1>
                     <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
                 </div>
 
@@ -52,6 +52,33 @@
             </div>
             <div class="btn-class">
                 <a href="#" class="btn">Donate Now</a>
+            </div>
+        </div>
+    </section>
+    <!-- donate-plan -->
+    <section class="donate-plan">
+        <div class="plan-content">
+            <h2>Our Donate Plan</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="plan-card">
+            <div id="card1">
+                <img src="./images/icons/food.png" alt="">
+                <h4 style="margin: 24px 0;">Food for a family</h4>
+                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet
+                <br> sint. Velit officia consequat duis enim velit mollit.</p>
+            </div>
+            <div id="card2">
+                <img src="./images/icons/shelter.png" alt="">
+                <h4 style="margin: 24px 0;">Food for a family</h4>
+                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet
+                    <br> sint. Velit officia consequat duis enim velit mollit.</p>
+            </div>
+            <div id="card3">
+                <img src="./images/icons/clothes.svg" alt="">
+                <h4 style="margin: 24px 0;">Food for a family</h4>
+                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet
+                    <br> sint. Velit officia consequat duis enim velit mollit.</p>
             </div>
         </div>
     </section>
