depends on donation done

--- a/index.html
+++ b/index.html
@@ -82,5 +82,28 @@
             </div>
         </div>
     </section>
+
+    <!-- depends-donation -->
+    <section class="depends-donation">
+
+        <div class="depends-content half-box">
+            <div class="depends-text">
+                <h2>Their lives depend on
+                    your donation</h2>
+                <p style="margin: 50px 0;">Lorem ipsum dolor sit amet, usu cu esse possit <br>
+                    referrentur, at eam falli deterruisset. No duo populo
+                    <br> animal noluisse, enim</p>
+            </div>
+            <div>
+                <a href="#" class="btn">How to continue?</a>
+            </div>
+        </div>
+
+
+        <div class="depends-img half-box">
+            <img src="./images/donation2.jpg" alt="">
+        </div>
+
+    </section>
 </body>
 </html>
