--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <br> animal noluisse, enim</p>
             </div>
             <div>
-                <a href="#" class="btn">How to continue?</a>
+                <a href="#" class="btn">How to contribute?</a>
             </div>
         </div>
 
@@ -105,5 +105,61 @@
         </div>
 
     </section>
+    <div class="help-report">
+        <h2>Organization Report of 2022</h2>
+        <div class="report-content">
+            <div class="report">
+                <img src="./images/icons/icons8-trust-50.png" alt="">
+                <h4 style="margin-top: 24px;">Donation</h4>
+                <h4>1 M+</h4>
+            </div>
+            <div class="report">
+                <img src="./images/icons/icons8-family-50.png" alt="">
+                <h4 style="margin-top: 24px;">Victims</h4>
+                <h4>2000+</h4>
+            </div>
+            <div class="report">
+                <img src="./images/icons/icons8-volunteer-64.png" alt="">
+                <h4 style="margin-top: 24px;">Volunteer</h4>
+                <h4>500+</h4>
+            </div>
+            <div class="report">
+                <img src="./images/icons/food.png" alt="">
+                <h4 style="margin-top: 24px;">Food</h4>
+                <h4>3M+</h4>
+            </div>
+            <div class="report">
+                <img src="./images/icons/shelter.png" alt="">
+                <h4 style="margin-top: 24px;">Shelter</h4>
+                <h4>200+</h4>
+            </div>
+            <div class="report">
+                <img src="./images/icons/clothes.svg" alt="">
+                <h4 style="margin-top: 24px;">Clothes</h4>
+                <h4>2000+</h4>
+            </div>
+        </div>
+    </div>
+
+    <!-- get-updates -->
+    <section class="get-updates">
+        <h2>Get My Updates</h2>
+        <br>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam voluptate nisi <br> laborum dolore id molestias error adipisci. Expedita, illo esse!</p>
+        <div class="update-email">
+            <div class="email-content">
+                <div>
+                    <input type="email" placeholder="Email">
+                </div>
+                <div>
+                    <a href="#">Subscribe</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+<footer>
+    <h2>Be Humble</h2>
+    <p>I'm indeed a king,as I know how to rule myself</p>
+</footer>
 </html>
