bonus mark work done

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     </section>
     <div class="help-report">
-        <h2>Organization Report of 2022</h2>
+        <h2>Organization Report of <span style="color: #FF5959;">2022</span></h2>
         <div class="report-content">
             <div class="report">
                 <img src="./images/icons/icons8-trust-50.png" alt="">
@@ -128,15 +128,20 @@
                 <h4 style="margin-top: 24px;">Food</h4>
                 <h4>3M+</h4>
             </div>
-            <div class="report">
-                <img src="./images/icons/shelter.png" alt="">
-                <h4 style="margin-top: 24px;">Shelter</h4>
-                <h4>200+</h4>
+        </div>
+        <h2 style="font-family: lobster;margin:64px 0;color: #FF5959;">Gallery</h2>
+        <div class="report-img">
+            <div class="">
+                <img src="./images/donation2.jpg" alt="">
             </div>
-            <div class="report">
-                <img src="./images/icons/clothes.svg" alt="">
-                <h4 style="margin-top: 24px;">Clothes</h4>
-                <h4>2000+</h4>
+            <div class="">
+                <img src="./images/donation5.jpg" alt="">
+            </div>
+            <div class="">
+                <img src="./images/donation6.jpg" alt="">
+            </div>
+            <div class="">
+                <img src="./images/donation9.jpg" alt="">
             </div>
         </div>
     </div>
