--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="banner-content">
                 <div>
                     <h1>Let’s Help Those Who Are <br> More In Need</h1>
-                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+                    <p>Allah will double fold the reward of the charity giver, as mentioned in the Quran (Al Hadid: 18). <br> “Verily those who give alms–be they men or women, -and give Allah a beautiful loan shall be repaid after increasing it many times; and theirs shall be a generous reward (Figure 1).”</p>
                 </div>
 
                 <div class="btn-class">
@@ -23,11 +23,15 @@
             </div>
         </div>
     </section>
+
+
+
     <!-- donate-today -->
     <section class="donate-today">
         <div class="donate-content">
             <h2>Donate today</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+            <p>Charity serves as a way to bring justice, balance and kindness to every society and community. It is our hope that the Muslim community fulfills <br>
+            their charitable duty correctly and does their part to eliminating poverty in communities everywhere.</p>
         </div>
         <div class="donate-card">
             <div>
@@ -55,33 +59,37 @@
             </div>
         </div>
     </section>
+
+
+
     <!-- donate-plan -->
     <section class="donate-plan">
         <div class="plan-content">
             <h2>Our Donate Plan</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+            <p>Muhammad, upon him be peace, said: "When a man dies, his deeds come to an end except for three things: Sadaqah Jariyah (ceaseless charity); a knowledge which <br> is beneficial, or a virtuous descendant who prays for him (for the deceased)." (Muslim)</p>
         </div>
         <div class="plan-card">
             <div id="card1">
                 <img src="./images/icons/food.png" alt="">
                 <h4 style="margin: 24px 0;">Food for a family</h4>
-                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet
-                <br> sint. Velit officia consequat duis enim velit mollit.</p>
+                <p>The Prophet, upon be peace, said: “The believer’s
+                    shade on the Day of Resurrection will be his charity.” (Al-Tirmidhi)</p>
             </div>
             <div id="card2">
                 <img src="./images/icons/shelter.png" alt="">
                 <h4 style="margin: 24px 0;">Food for a family</h4>
-                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet
-                    <br> sint. Velit officia consequat duis enim velit mollit.</p>
+                <p>Prophet Muhammad, upon him be peace, said, “Protect yourself from hell-fire even by giving a piece of date as charity.” (Al-Bukhari and Muslim)</p>
             </div>
             <div id="card3">
                 <img src="./images/icons/clothes.svg" alt="">
                 <h4 style="margin: 24px 0;">Food for a family</h4>
-                <p>Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet
-                    <br> sint. Velit officia consequat duis enim velit mollit.</p>
+                <p>“Allah, the Exalted, says, ‘Spend, O son of Adam, and I shall spend on you.’” – Prophet Muhammad, upon him be peace (Al-Bukhari and Muslim).</p>
             </div>
         </div>
     </section>
+
+
+
 
     <!-- depends-donation -->
     <section class="depends-donation">
@@ -90,9 +98,7 @@
             <div class="depends-text">
                 <h2>Their lives depend on
                     your donation</h2>
-                <p style="margin: 50px 0;">Lorem ipsum dolor sit amet, usu cu esse possit <br>
-                    referrentur, at eam falli deterruisset. No duo populo
-                    <br> animal noluisse, enim</p>
+                <p style="margin: 50px 0;">Muhammad, upon him be peace, said: “Charity does not in any way decrease the wealth and the servant who forgives, Allah adds to his respect; and the one who shows humility, Allah elevates him in the estimation (of the people).” (Muslim)</p>
             </div>
             <div>
                 <a href="#" class="btn">How to contribute?</a>
@@ -146,11 +152,14 @@
         </div>
     </div>
 
+
+
+
     <!-- get-updates -->
     <section class="get-updates">
         <h2>Get My Updates</h2>
         <br>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam voluptate nisi <br> laborum dolore id molestias error adipisci. Expedita, illo esse!</p>
+        <p>“Do not show lethargy or negligence in giving alms and charity till your last breath.” -Muhammad, upon him be peace (Bukhari and Muslim).</p>
         <div class="update-email">
             <div class="email-content">
                 <div>
@@ -163,8 +172,11 @@
         </div>
     </section>
 </body>
+
+
+
 <footer>
     <h2>Be Humble</h2>
-    <p>I'm indeed a king,as I know how to rule myself</p>
+    <p>What better way to love one another than to give charity? </p>
 </footer>
 </html>
