rewrite form tag

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <h2>Get My Updates</h2>
         <br>
         <p>“Do not show lethargy or negligence in giving alms and charity till your last breath.” -Muhammad, upon him be peace (Bukhari and Muslim).</p>
-        <div class="update-email">
+        <form class="update-email">
             <div class="email-content">
                 <div>
                     <input type="email" placeholder="Email">
@@ -169,7 +169,7 @@
                     <a href="#">Subscribe</a>
                 </div>
             </div>
-        </div>
+        </form>
     </section>
 </body>
 
